# build-labs

lab01/: print.cpp  print.hpp
lab02/: main.c
lab03/: main.c  sub.c
lab04/: Makefile
lab05/: CMakeLists.txt  add.c
lab06/: CMakeLists.txt  sub.h
